# wincurl

./: .gitignore  LICENSE  README.md  build.ps1  local-download.bat  local-download.ps1  version.ps1
.github/workflows/: ci.yml
cmake/: ReadMe.md
cmake/brotli/: CMakeLists.txt
cmake/zlib/: CMakeLists.txt
cmake/zstd/: CMakeLists.txt
patch/: brotli.patch  curl.patch  libssh2.patch  nghttp3.patch  ngtcp2.patch  umul128-arm64.patch  zlib-ng.patch
script/: ReadMe.md  version.ps1
script/Utility/: Utility.psm1
